# LLaVA-from-scratch

./: .gitignore  LICENSE  README.md  check_cc3m_dataset.py  check_llava_dataset.py  dataloader.py  infer.py  llava_dataloader.py  llava_image_downloader.py  main.py  model.py  projection_dataloader.py  pyproject.toml  test_text_only.py  train_llava.py  train_projector.py  try_llama.py  try_vicuna.py
