[project]
name = "llava-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.5.0",
    "ijson>=3.4.0.post0",
    "matplotlib>=3.10.8",
    "pillow>=12.1.1",
    "psutil>=7.2.2",
    "requests>=2.32.5",
    "webdataset>=1.0.2",
]
