[project]
name = "llava-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.5.0",
    "ijson>=3.4.0.post0",
    "matplotlib>=3.10.8",
    "pillow>=12.1.1",
    "protobuf>=6.33.5",
    "psutil>=7.2.2",
    "requests>=2.32.5",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.2.0",
    "webdataset>=1.0.2",
]
